[package]
name = "twitter_snowflake"
version = "1.0.2"
edition = "2021"

authors = ["Trayvon Pan <trayvonpan@gmail.com>"]
categories = ["algorithms"]
description = "A lightweight, efficient library that implements Twitter's Snowflake algorithm"
documentation = "https://docs.rs/twitter_snowflake/"
keywords = ["snowflake", "twitter", "unique", "id", "generator"]
license = "MIT"
repository = "https://github.com/trayvonpan/snowflake/"
readme = "README.md"

[dependencies]
thiserror = "1.0"

[features]
float-safe = []
