[package]
edition = "2021"
rust-version = "1.85"
name = "twitter_snowflake"
version = "1.0.3"

authors = ["Alasdair Pan <alasdairpan@gmail.com>"]
categories = ["algorithms"]
description = "A lightweight, efficient library that implements Twitter's Snowflake algorithm"
documentation = "https://docs.rs/twitter_snowflake/"
keywords = ["snowflake", "twitter", "unique", "id", "generator"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alasdairpan/snowflake/"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[features]
float-safe = []

[[bench]]
harness = false
name = "bench"
